# CalculatorCLI

./: .clang-format  CMakeLists.txt  Custom_Errors.h
include/: Equation.h  Evaluator.h  Lexer.h  Parser.h  Token.h  Value.h
src/: Equation.cpp  Evaluator.cpp  Lexer.cpp  Parser.cpp  main.cpp
